@@ -4,14 +4,14 @@ import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.prefs.BackingStoreException;
 
 import javax.script.ScriptEngine;
 import javax.script.ScriptEngineFactory;
-import javax.script.ScriptEngineManager;
 
+import net.sf.openrocket.scripting.ScriptEngineManagerRedux;
+import net.sf.openrocket.scripting.GraalJSScriptEngineFactory;
 import net.sf.openrocket.startup.Preferences;
 import net.sf.openrocket.util.ArrayList;
 import net.sf.openrocket.util.BugException;
@@ -22,22 +22,34 @@ import com.google.inject.Inject;
  * Utility class used by the scripting extension and its configurator.
  */
 public class ScriptingUtil {
-	
 	static final String NODE_ID = ScriptingExtension.class.getCanonicalName();
 	
-	private static final List<String> DEFAULT_TRUSTED_HASHES = Arrays.asList(
+	private static final List<String> DEFAULT_TRUSTED_HASHES = List.of(
 			// Roll control script in roll control example file:
 			"SHA-256:9bf364ce4d4a75f09b29178bf9d6872b232084f73dae20dc7b5b073e54e95a42"
-			);
+	);
 	
 	/** The name to be chosen from a list of alternatives.  If not found, will use the default name. */
-	private static final List<String> PREFERRED_LANGUAGE_NAMES = Arrays.asList("JavaScript");
+	private static final List<String> PREFERRED_LANGUAGE_NAMES = List.of("JavaScript");
+
+	private static ScriptEngineManagerRedux manager;
 	
 	@Inject
 	Preferences prefs;
-	
-	
-	
+
+	public ScriptingUtil() {
+		if (manager == null) {
+			// using the ScriptEngineManger from javax.script package pulls in the sun.misc.ServiceConfigurationError 
+			// which is removed in Java 9+ which causes a ClassNotFoundException to be thrown.
+			manager = new ScriptEngineManagerRedux();
+
+			manager.registerEngineName("Javascript", new GraalJSScriptEngineFactory());
+		}
+	}
+
+	public ScriptEngine getEngineByName(String shortName) {
+		return manager.getEngineByName(shortName);
+	}
 	
 	/**
 	 * Return the preferred internal language name based on a script language name.
@@ -48,37 +60,22 @@ public class ScriptingUtil {
 		if (language == null) {
 			return null;
 		}
-		
-		ScriptEngineManager manager = new ScriptEngineManager();
+
 		ScriptEngine engine = manager.getEngineByName(language);
 		if (engine == null) {
 			return null;
 		}
-		return getLanguage(engine.getFactory());
+
+		return getLanguageByFactory(engine.getFactory());
 	}
-	
-	
+
 	public List<String> getLanguages() {
-		List<String> langs = new ArrayList<String>();
-		ScriptEngineManager manager = new ScriptEngineManager();
+		List<String> languages = new ArrayList<>();
 		for (ScriptEngineFactory factory : manager.getEngineFactories()) {
-			langs.add(getLanguage(factory));
+			languages.add(getLanguageByFactory(factory));
 		}
-		return langs;
+		return languages;
 	}
-	
-	
-	private String getLanguage(ScriptEngineFactory factory) {
-		for (String name : factory.getNames()) {
-			if (PREFERRED_LANGUAGE_NAMES.contains(name)) {
-				return name;
-			}
-		}
-		
-		return factory.getLanguageName();
-	}
-	
-	
 	
 	/**
 	 * Test whether the user has indicated this script to be trusted,
@@ -122,7 +119,16 @@ public class ScriptingUtil {
 			throw new BugException(e);
 		}
 	}
-	
+
+	private String getLanguageByFactory(ScriptEngineFactory factory) {
+		for (String name : factory.getNames()) {
+			if (PREFERRED_LANGUAGE_NAMES.contains(name)) {
+				return name;
+			}
+		}
+
+		return factory.getLanguageName();
+	}
 	
 	static String normalize(String script) {
 		return script.replaceAll("\r", "").trim();
@@ -132,10 +138,8 @@ public class ScriptingUtil {
 		/*
 		 * NOTE:  Hash length must be max 80 chars, the max length of a key in a Properties object.
 		 */
-		
 		String output;
 		MessageDigest digest;
-		
 		try {
 			digest = MessageDigest.getInstance("SHA-256");
 			digest.update(language.getBytes(StandardCharsets.UTF_8));
@@ -152,5 +156,4 @@ public class ScriptingUtil {
 
 		return digest.getAlgorithm() + ":" + output;
 	}
-	
 }
